--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ h1 {
     width: 300px;
     display: flex;
     margin-top: 30px;
-    border: 1px dotted #FFF;
+    border: 1px #FFF;
+    border-style: outset;
     padding: 10px;
 }
 .infoitem {
